# site-projeto

./: Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  run_web.sh
caixa/: urls.py
caixa/migrations/: 0002_auto_20211003_0009.py  0003_saldo_tipo.py  0005_alter_saldo_options.py
portifolio/: settings.py  urls.py
static/css/: global.css
users/: urls.py
users/migrations/: 0002_alter_user_imagem.py
