[tool.poetry]
name = "projeto_site"
version = "0.1.0"
description = ""
authors = ["Zigaib <andre.zigaib@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
Pillow = "^8.3.1"
django-crispy-forms = "^1.12.0"
django-session-timeout = "^0.1.0"
psycopg2-binary = "^2.9.1"
django-environ = "^0.8.1"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
Django = "^3.2.6"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
